<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="711dp"
        android:layout_height="91dp"
        android:layout_marginTop="80dp"
        android:text="@string/otpvalidation"
        android:textColor="@color/colorPrimary"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="@string/newpassword"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="500dp"
        android:layout_height="75dp"
        android:layout_marginTop="88dp"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:drawableRight="@android:drawable/ic_menu_view"
        android:drawableTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/editTextTextPassword5"
        android:layout_width="500dp"
        android:layout_height="75dp"
        android:layout_marginTop="60dp"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:drawableRight="@android:drawable/ic_menu_view"
        android:drawableTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/confirmpassword"
        android:inputType="textPassword"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword4" />

    <Button
        android:id="@+id/button7"
        android:layout_width="330dp"
        android:layout_height="75dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/Submit"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword5" />
</androidx.constraintlayout.widget.ConstraintLayout>