<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#000000">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="395dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:text="@string/otpvalidation"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber1"
        android:layout_width="59dp"
        android:layout_height="50dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="one"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="DuplicateIds,LabelFor" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="59dp"
        android:layout_height="50dp"
        android:layout_marginTop="124dp"
        android:autofillHints="two"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="49dp" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="59dp"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="210dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextNumber4"
        android:layout_width="59dp"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="294dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button5"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="212dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="Verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="92dp"
        android:text="@string/notreceive"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="172dp"
        android:text="@string/resend"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

</androidx.constraintlayout.widget.ConstraintLayout>